--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-service-worker": "^0.1.1",
     "react-table": "^7.7.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
