--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-service-worker": "^0.1.1",
     "react-table": "^7.7.0",
+    "register-service-worker": "^1.7.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
